<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="jp.postclass.chordtraining.activity.SettingsActivity$CommonPreferenceFragment"
        android:icon="@drawable/ic_audiotrack_black_24dp"
        android:title="@string/pref_header_common" />

    <header
        android:fragment="jp.postclass.chordtraining.activity.SettingsActivity$TonePreferenceFragment"
        android:icon="@drawable/ic_audiotrack_black_24dp"
        android:title="@string/pref_header_tone" />

    <header
        android:fragment="jp.postclass.chordtraining.activity.SettingsActivity$ChordRootPreferenceFragment"
        android:icon="@drawable/ic_audiotrack_black_24dp"
        android:title="@string/pref_header_chord_root" />

    <header
        android:fragment="jp.postclass.chordtraining.activity.SettingsActivity$ChordDegreePreferenceFragment"
        android:icon="@drawable/ic_audiotrack_black_24dp"
        android:title="@string/pref_header_chord_degree" />

</preference-headers>
