<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.postclass.chordtraining.activity.MainActivity">

    <Button
        android:id="@+id/mainButtonTone"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:onClick="onClickTone"
        android:text="@string/main_tone_button"
        android:layout_margin="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/mainButtonChordRoot"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="0dp"
        android:onClick="onClickChordRoot"
        android:text="@string/main_chord_root_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainButtonTone" />

    <Button
        android:id="@+id/mainButtonChordDegree"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="0dp"
        android:onClick="onClickChordDegree"
        android:text="@string/main_chord_degree_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainButtonChordRoot" />

    <Button
        android:id="@+id/mainButtonBook"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="0dp"
        android:onClick="onClickBook"
        android:text="@string/main_reference_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainButtonChordDegree" />

    <Button
        android:id="@+id/mainButtonReference"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="0dp"
        android:onClick="onClickReference"
        android:text="@string/main_reference_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainButtonBook" />

</android.support.constraint.ConstraintLayout>
